# IMN401

./: .gitignore  CMakeLists.txt  gen_solution.bat  glm_msvc_compat.h  imgui.ini  readme.txt
Objets/: plante.mtl  sofa.mtl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  CubePrimitive.cpp  CubePrimitive.h  EngineGL.cpp  EngineGL.h  Frame.cpp  Frame.h  FrameBufferObject.cpp  GLProgram.cpp  GLProgram.h  IntersectionData.h  Light.h  Main.cpp  MaterialGL.h  MirroirManager.cpp  MirroirManager.h  ModelGL.cpp  ModelGL.h  Node.cpp  Node.h  NodeCollector.h  Plane.cpp  Plane.h  Primitive3DManager.cpp  Primitive3DManager.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  SpherePrimitive.cpp  SpherePrimitive.h  Texture2D.cpp  Texture2D.h  VectorPrimitive.cpp  VectorPrimitive.h  (+1 more)
src/Effects/Display/: Display.cpp
src/Materials/BaseMaterial/: BaseMaterial.cpp  BaseMaterial.h  Main-FS.glsl  Main-VS.glsl
src/Materials/MirroirMaterial/: Main-FS.glsl  Main-VS.glsl  MirroirMaterial.cpp  MirroirMaterial.h
tests/: Main_tests.cpp
